feat: Add feedback

--- a/Portfolio UOC/contacto.html
+++ b/Portfolio UOC/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <title>Sandra Campaña</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -30,22 +34,24 @@
         <form>
             <h1 class="contactTit">What are you waiting for? Say Hi <img src="src/Hi.png" alt="" height="50"></h1>
             <div class="input-container ic1">
-              <input id="firstname" class="input" type="text" placeholder=" " />
-              <label for="firstname" class="placeholder">What's your name?</label>
+                <input id="firstname" class="input" type="text" placeholder=" " />
+                <label for="firstname" class="placeholder">What's your name?</label>
             </div>
             <div class="input-container ic2">
-              <input id="lastname" class="input" type="text" placeholder=" " />
-              <label for="lastname" class="placeholder">And your email?</label>
+                <input id="lastname" class="input" type="text" placeholder=" " />
+                <label for="lastname" class="placeholder">And your email?</label>
             </div>
             <div class="input-container1 ic2">
-                <textarea id="Message" class="textarea" name="Message" type="text" rows="5"  placeholder="">Your message</textarea>
+                <!-- Para no romper el diseño debes seguir con la misma animacion en el texarea  -->
+                <textarea id="Message" class="textarea" name="Message" type="text" rows="5" placeholder=""></textarea>
+                <label for="Message" class='placeholder'>Your message</label>
             </div>
             <div class="input-container ic3">
                 <label class="checkbox">
-                    <input type="checkbox" required/>
+                    <input type="checkbox" required />
                     <span>I have read and accept the processing of my data.</span><br>
                 </label>
-                
+
             </div>
             <button type="text" class="submit">Send</button>
         </form>
@@ -53,11 +59,13 @@
 
     <div class="footer">
         <footer>
-            <a href="https://www.linkedin.com/in/sandracampa%C3%B1a/" target="_blank" class="il"><img src="src/landing/linkedin.svg" alt="" ></img></a>
+            <a href="https://www.linkedin.com/in/sandracampa%C3%B1a/" target="_blank" class="il"><img
+                    src="src/landing/linkedin.svg" alt=""></img></a>
             <p class="email il">me@sandracampana.com</p>
             <p class="copyright">Sandra Campaña © 2022</p>
         </footer>
     </div>
 
 </body>
+
 </html>
