--- a/Portfolio UOC/index.html
+++ b/Portfolio UOC/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- demasiadas font-weight que no se utilizan -->
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
@@ -143,6 +144,7 @@
         </div>
     </section>
 
+    <!-- aqui sobra el div foooter , pon directamente footer -->
     <div class="footer">
         <footer>
             <!-- los anchor a paginas que no son de tu dominio siempre debe llevar rel="noopener noreferrer" -->
